# traffic-sim-with-neural-network

./: .config  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  best_fitness.json  metrics.csv  run_evolution.sh
draw_main/: Cargo.toml
draw_main/src/: main.rs
evolution_main/: .gitignore  Cargo.toml  best_fitness.json
evolution_main/src/: main.rs  metrics.rs  pbt_metrics.rs
genetics/: Cargo.toml
genetics/src/: lib.rs
main/: Cargo.toml  output.txt
main/src/: main.rs
neural/: Cargo.toml
neural/src/: lib.rs
traffic/: Cargo.toml
traffic/src/: cars.rs  levels.rs  lib.rs  road.rs  simulation.rs
visualization/: plot_3d.py  plot_3d_interactive.py  plot_metrics.py  requirements.txt  visualize.py
