[package]
name = "evolution_main"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.13"
rand = "0.9.2"
traffic = {path = "../traffic"}
neural ={ path = "../neural"}
genetics = { path = "../genetics"}
rand_chacha = "0.9.0"
indicatif = "0.18.3"
serde = "1.0.228"
bincode = "1.3.3"
serde_json = "1.0.149"
